Fixed the footer alignment issue on the right

--- a/src/sass/myservice-footer.scss
+++ b/src/sass/myservice-footer.scss
@@ -16,7 +16,7 @@
 	img {
 		display: block;
 		max-width: 300px;
-                max-height: 64px;
+        max-height: 64px;
 		text-align: center;
 		margin: 0 auto 1em auto;
 	}
@@ -28,6 +28,9 @@
 		border-top: 1px solid #c4c4c4;
 		padding:0px;
 		margin:1em 0 1em 0;
+	}
+	ul {
+		max-width: 100%;
 	}
 }
 
